--- a/banner/build.gradle
+++ b/banner/build.gradle
@@ -4,12 +4,11 @@ apply plugin: 'com.jfrog.bintray'
 version = "1.3.3"*/
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 23
+        minSdkVersion 16
+        targetSdkVersion 28
         versionCode 30
         versionName "1.3.3"
     }
@@ -22,10 +21,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    /*testCompile 'junit:junit:4.12'*/
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.github.bumptech.glide:glide:3.6.1'
 }
 
 
